test/corpus/basic.txt
==================
Declarations
==================

EC50_proe   @Const {units: kcell/L} = 4e8;
SCF_pl_corr @Record {units: pM} := SCF_pl - SCF_pl_base;
SCF_pl_pg_mL@Record {units: ng/L, output:true} := SCF_pl * Mr_scf / kilo;

---

(source_file
  (statement
    (index
      (identifier))
    (class
      name: (identifier))
    (metadata
      (pair
        key: (identifier)
        value: (metadata_value
          (unit_fragment))))
    (assignment
      operator: (assignment_operator)
      value: (math_expression
        (number))))
  (statement
    (index
      (identifier))
    (class
      name: (identifier))
    (metadata
      (pair
        key: (identifier)
        value: (metadata_value
          (identifier))))
    (assignment
      operator: (assignment_operator)
      value: (math_expression
        (binary_expression
          left: (math_expression
            (identifier))
          right: (math_expression
            (identifier))))))
  (statement
    (index
      (identifier))
    (class
      name: (identifier))
    (metadata
      (pair
        key: (identifier)
        value: (metadata_value
          (unit_fragment)))
      (pair
        key: (identifier)
        value: (metadata_value
          (boolean))))
    (assignment
      operator: (assignment_operator)
      value: (math_expression
        (binary_expression
          left: (math_expression
            (binary_expression
              left: (math_expression
                (identifier))
              right: (math_expression
                (identifier))))
          right: (math_expression
            (identifier)))))))

==================
Namespace and process annotations
==================

namespace one begin
  include "simple.heta" type heta with {a: aaa, b: 1}
  V_dif_hsc_mpp_bm {actors: HSC_bm => MPP_bm, units: kcell/h} 'Differentiation rate';
end

---

(source_file
  (namespace_block
    name: (identifier)
    (include_statement
      source: (quoted_string)
      type: (identifier)
      parameters: (metadata
        (pair
          key: (identifier)
          value: (metadata_value
            (identifier)))
        (pair
          key: (identifier)
          value: (metadata_value
            (number)))))
    (statement
      (index
        (identifier))
      (metadata
        (pair
          key: (identifier)
          value: (metadata_value
            (process_expression
              (actor_side
                (actor_factor
                  (identifier)))
              (process_arrow)
              (actor_side
                (actor_factor
                  (identifier))))))
        (pair
          key: (identifier)
          value: (metadata_value
            (unit_fragment))))
      (title))))

